Fix layout shift on focus by using color instead of border-width change

--- a/_calc.css
+++ b/_calc.css
@@ -168,7 +168,7 @@ input.Num{
     height: 22%;
     border-radius:none;
     background-color: transparent;
-    border-bottom:1px solid #000000;
+    border-bottom:2px solid #555555;
     border-right:none;
     border-left:none;
     border-top:none;
